--- a/src/iOS_Lang/bs.lproj/Localizable.strings
+++ b/src/iOS_Lang/bs.lproj/Localizable.strings
@@ -113,13 +113,13 @@
 "Categories" = "Kategorije";
 
 /* No comment provided by engineer. */
-"Change volume by %@" = "Promjeni jačinu zvuka za %@";
+"Change volume by" = "Promjeni jačinu zvuka za";
 
 /* No comment provided by engineer. */
-"Change X by %@" = "Promjeni X za %@";
+"Change X by " = "Promjeni X za ";
 
 /* No comment provided by engineer. */
-"Change Y by %@" = "Promjeni Y za %@";
+"Change Y by " = "Promjeni Y za ";
 
 /* No comment provided by engineer. */
 "Changes discarded!" = "Promjene odbačene!";
@@ -708,9 +708,6 @@
 
 /* paint */
 "pipette" = "pipette";
-
-/* No comment provided by engineer. */
-"Place at\nX: %@ Y: %@" = "Place at\nX: %@ Y: %@";
 
 /* No comment provided by engineer. */
 "Play" = "Pokreni";
