--- a/src/iOS_Lang/fa.lproj/Localizable.strings
+++ b/src/iOS_Lang/fa.lproj/Localizable.strings
@@ -113,25 +113,13 @@
 "Categories" = "دسته ها";
 
 /* No comment provided by engineer. */
-"Change brightness\nby %@\%" = "Change brightness\nby %@\\%";
+"Change volume by" = "تغییر حجم با";
 
 /* No comment provided by engineer. */
-"Change size by %@\%" = "Change size by %@\\%";
+"Change X by " = "تغییر X با ";
 
 /* No comment provided by engineer. */
-"Change transparency\nby %@\%" = "Change transparency\nby %@\\%";
-
-/* No comment provided by engineer. */
-"Change variable\n%@\nby %@" = "Change variable\n%@\nby %@";
-
-/* No comment provided by engineer. */
-"Change volume by %@" = "تغییر حجم با %@";
-
-/* No comment provided by engineer. */
-"Change X by %@" = "تغییر X با %@";
-
-/* No comment provided by engineer. */
-"Change Y by %@" = "تغییر Y با %@";
+"Change Y by " = "تغییر Y با ";
 
 /* No comment provided by engineer. */
 "Changes discarded!" = "تغییرات از بین رفت!";
@@ -729,9 +717,6 @@
 
 /* paint */
 "pipette" = "قطره چکان";
-
-/* No comment provided by engineer. */
-"Place at\nX: %@ Y: %@" = "Place at\nX: %@ Y: %@";
 
 /* No comment provided by engineer. */
 "Play" = "اجرا";
