--- a/src/iOS_Lang/hu.lproj/Localizable.strings
+++ b/src/iOS_Lang/hu.lproj/Localizable.strings
@@ -113,13 +113,13 @@
 "Categories" = "Kategóriák";
 
 /* No comment provided by engineer. */
-"Change volume by %@" = "Hangerő változzon: %@";
+"Change volume by" = "Hangerő változzon";
 
 /* No comment provided by engineer. */
-"Change X by %@" = "X változzon: %@";
+"Change X by " = "X változzon ";
 
 /* No comment provided by engineer. */
-"Change Y by %@" = "Y változzon: %@";
+"Change Y by " = "Y változzon ";
 
 /* No comment provided by engineer. */
 "Changes discarded!" = "Módosítások elvetve!";
@@ -713,9 +713,6 @@
 "pipette" = "pipetta";
 
 /* No comment provided by engineer. */
-"Place at\nX: %@ Y: %@" = "Place at\nX: %@ Y: %@";
-
-/* No comment provided by engineer. */
 "Play" = "Indítás";
 
 /* Description of AlertView if the user tries to import a sound but no sound has been imported using iTunes. */
@@ -903,9 +900,6 @@
 
 /* No comment provided by engineer. */
 "Set background" = "Háttér legyen";
-
-/* No comment provided by engineer. */
-"Set brightness to %@\%" = "Set brightness to %@\\%";
 
 /* No comment provided by engineer. */
 "Set description" = "Leírás megadása";
